# Impulse_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: main.cpp
include/: dataparser.hpp  datatypes.hpp  eventsprocessing.hpp
scenaries/: testScenario.txt  testScenario2.txt
src/: dataparser.cpp  datatypes.cpp  eventsprocessing.cpp
